// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DropdownMenu > Basic rendering > renders content when open 1`] = `
<DocumentFragment>
  <button
    aria-controls="_r_8_"
    aria-expanded="true"
    aria-haspopup="menu"
    data-slot="dropdown-menu-trigger"
    id="base-ui-_r_a_"
    tabindex="0"
    type="button"
  >
    Open Menu
  </button>
  <span
    data-base-ui-focus-guard=""
    data-type="outside"
    role="button"
    style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
    tabindex="0"
  />
  <span
    aria-owns="_r_c_"
    style="clip-path: inset(50%); position: fixed; top: 0px; left: 0px;"
  />
  <span
    data-base-ui-focus-guard=""
    data-type="outside"
    role="button"
    style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
    tabindex="0"
  />
</DocumentFragment>
`;

exports[`DropdownMenu > Basic rendering > renders the trigger properly 1`] = `
<DocumentFragment>
  <button
    aria-expanded="false"
    aria-haspopup="menu"
    data-slot="dropdown-menu-trigger"
    id="base-ui-_r_4_"
    tabindex="0"
    type="button"
  >
    Open Menu
  </button>
</DocumentFragment>
`;

exports[`DropdownMenu > Complex dropdown menu > renders all components together properly 1`] = `
<DocumentFragment>
  <button
    aria-controls="_r_7k_"
    aria-expanded="true"
    aria-haspopup="menu"
    data-slot="dropdown-menu-trigger"
    id="base-ui-_r_7m_"
    tabindex="0"
    type="button"
  >
    Complex Menu
  </button>
  <span
    data-base-ui-focus-guard=""
    data-type="outside"
    role="button"
    style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
    tabindex="0"
  />
  <span
    aria-owns="_r_7o_"
    style="clip-path: inset(50%); position: fixed; top: 0px; left: 0px;"
  />
  <span
    data-base-ui-focus-guard=""
    data-type="outside"
    role="button"
    style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
    tabindex="0"
  />
</DocumentFragment>
`;

exports[`DropdownMenu > Content positioning > applies custom className to content 1`] = `
<DocumentFragment>
  <button
    aria-controls="_r_8i_"
    aria-expanded="true"
    aria-haspopup="menu"
    data-slot="dropdown-menu-trigger"
    id="base-ui-_r_8k_"
    tabindex="0"
    type="button"
  >
    Menu
  </button>
  <span
    data-base-ui-focus-guard=""
    data-type="outside"
    role="button"
    style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
    tabindex="0"
  />
  <span
    aria-owns="_r_8m_"
    style="clip-path: inset(50%); position: fixed; top: 0px; left: 0px;"
  />
  <span
    data-base-ui-focus-guard=""
    data-type="outside"
    role="button"
    style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
    tabindex="0"
  />
</DocumentFragment>
`;

exports[`DropdownMenu > Content positioning > renders with custom sideOffset 1`] = `
<DocumentFragment>
  <button
    aria-controls="_r_89_"
    aria-expanded="true"
    aria-haspopup="menu"
    data-slot="dropdown-menu-trigger"
    id="base-ui-_r_8b_"
    tabindex="0"
    type="button"
  >
    Menu
  </button>
  <span
    data-base-ui-focus-guard=""
    data-type="outside"
    role="button"
    style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
    tabindex="0"
  />
  <span
    aria-owns="_r_8d_"
    style="clip-path: inset(50%); position: fixed; top: 0px; left: 0px;"
  />
  <span
    data-base-ui-focus-guard=""
    data-type="outside"
    role="button"
    style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
    tabindex="0"
  />
</DocumentFragment>
`;

exports[`DropdownMenu > DropdownMenuCheckboxItem > applies custom className 1`] = `
<DocumentFragment>
  <button
    aria-controls="_r_38_"
    aria-expanded="true"
    aria-haspopup="menu"
    data-slot="dropdown-menu-trigger"
    id="base-ui-_r_3a_"
    tabindex="0"
    type="button"
  >
    Menu
  </button>
  <span
    data-base-ui-focus-guard=""
    data-type="outside"
    role="button"
    style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
    tabindex="0"
  />
  <span
    aria-owns="_r_3c_"
    style="clip-path: inset(50%); position: fixed; top: 0px; left: 0px;"
  />
  <span
    data-base-ui-focus-guard=""
    data-type="outside"
    role="button"
    style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
    tabindex="0"
  />
</DocumentFragment>
`;

exports[`DropdownMenu > DropdownMenuCheckboxItem > renders checked state properly 1`] = `
<DocumentFragment>
  <button
    aria-controls="_r_2m_"
    aria-expanded="true"
    aria-haspopup="menu"
    data-slot="dropdown-menu-trigger"
    id="base-ui-_r_2o_"
    tabindex="0"
    type="button"
  >
    Menu
  </button>
  <span
    data-base-ui-focus-guard=""
    data-type="outside"
    role="button"
    style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
    tabindex="0"
  />
  <span
    aria-owns="_r_2q_"
    style="clip-path: inset(50%); position: fixed; top: 0px; left: 0px;"
  />
  <span
    data-base-ui-focus-guard=""
    data-type="outside"
    role="button"
    style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
    tabindex="0"
  />
</DocumentFragment>
`;

exports[`DropdownMenu > DropdownMenuCheckboxItem > renders unchecked state properly 1`] = `
<DocumentFragment>
  <button
    aria-controls="_r_2d_"
    aria-expanded="true"
    aria-haspopup="menu"
    data-slot="dropdown-menu-trigger"
    id="base-ui-_r_2f_"
    tabindex="0"
    type="button"
  >
    Menu
  </button>
  <span
    data-base-ui-focus-guard=""
    data-type="outside"
    role="button"
    style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
    tabindex="0"
  />
  <span
    aria-owns="_r_2h_"
    style="clip-path: inset(50%); position: fixed; top: 0px; left: 0px;"
  />
  <span
    data-base-ui-focus-guard=""
    data-type="outside"
    role="button"
    style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
    tabindex="0"
  />
</DocumentFragment>
`;

exports[`DropdownMenu > DropdownMenuItem > applies custom className 1`] = `
<DocumentFragment>
  <button
    aria-controls="_r_24_"
    aria-expanded="true"
    aria-haspopup="menu"
    data-slot="dropdown-menu-trigger"
    id="base-ui-_r_26_"
    tabindex="0"
    type="button"
  >
    Menu
  </button>
  <span
    data-base-ui-focus-guard=""
    data-type="outside"
    role="button"
    style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
    tabindex="0"
  />
  <span
    aria-owns="_r_28_"
    style="clip-path: inset(50%); position: fixed; top: 0px; left: 0px;"
  />
  <span
    data-base-ui-focus-guard=""
    data-type="outside"
    role="button"
    style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
    tabindex="0"
  />
</DocumentFragment>
`;

exports[`DropdownMenu > DropdownMenuItem > renders default variant properly 1`] = `
<DocumentFragment>
  <button
    aria-controls="_r_u_"
    aria-expanded="true"
    aria-haspopup="menu"
    data-slot="dropdown-menu-trigger"
    id="base-ui-_r_10_"
    tabindex="0"
    type="button"
  >
    Open Menu
  </button>
  <span
    data-base-ui-focus-guard=""
    data-type="outside"
    role="button"
    style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
    tabindex="0"
  />
  <span
    aria-owns="_r_12_"
    style="clip-path: inset(50%); position: fixed; top: 0px; left: 0px;"
  />
  <span
    data-base-ui-focus-guard=""
    data-type="outside"
    role="button"
    style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
    tabindex="0"
  />
</DocumentFragment>
`;

exports[`DropdownMenu > DropdownMenuItem > renders destructive variant properly 1`] = `
<DocumentFragment>
  <button
    aria-controls="_r_19_"
    aria-expanded="true"
    aria-haspopup="menu"
    data-slot="dropdown-menu-trigger"
    id="base-ui-_r_1b_"
    tabindex="0"
    type="button"
  >
    Menu
  </button>
  <span
    data-base-ui-focus-guard=""
    data-type="outside"
    role="button"
    style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
    tabindex="0"
  />
  <span
    aria-owns="_r_1d_"
    style="clip-path: inset(50%); position: fixed; top: 0px; left: 0px;"
  />
  <span
    data-base-ui-focus-guard=""
    data-type="outside"
    role="button"
    style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
    tabindex="0"
  />
</DocumentFragment>
`;

exports[`DropdownMenu > DropdownMenuItem > renders with inset properly 1`] = `
<DocumentFragment>
  <button
    aria-controls="_r_1i_"
    aria-expanded="true"
    aria-haspopup="menu"
    data-slot="dropdown-menu-trigger"
    id="base-ui-_r_1k_"
    tabindex="0"
    type="button"
  >
    Menu
  </button>
  <span
    data-base-ui-focus-guard=""
    data-type="outside"
    role="button"
    style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
    tabindex="0"
  />
  <span
    aria-owns="_r_1m_"
    style="clip-path: inset(50%); position: fixed; top: 0px; left: 0px;"
  />
  <span
    data-base-ui-focus-guard=""
    data-type="outside"
    role="button"
    style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
    tabindex="0"
  />
</DocumentFragment>
`;

exports[`DropdownMenu > DropdownMenuLabel > applies custom className 1`] = `
<DocumentFragment>
  <button
    aria-controls="_r_50_"
    aria-expanded="true"
    aria-haspopup="menu"
    data-slot="dropdown-menu-trigger"
    id="base-ui-_r_52_"
    tabindex="0"
    type="button"
  >
    Menu
  </button>
  <span
    data-base-ui-focus-guard=""
    data-type="outside"
    role="button"
    style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
    tabindex="0"
  />
  <span
    aria-owns="_r_54_"
    style="clip-path: inset(50%); position: fixed; top: 0px; left: 0px;"
  />
  <span
    data-base-ui-focus-guard=""
    data-type="outside"
    role="button"
    style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
    tabindex="0"
  />
</DocumentFragment>
`;

exports[`DropdownMenu > DropdownMenuLabel > renders properly 1`] = `
<DocumentFragment>
  <button
    aria-controls="_r_4e_"
    aria-expanded="true"
    aria-haspopup="menu"
    data-slot="dropdown-menu-trigger"
    id="base-ui-_r_4g_"
    tabindex="0"
    type="button"
  >
    Menu
  </button>
  <span
    data-base-ui-focus-guard=""
    data-type="outside"
    role="button"
    style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
    tabindex="0"
  />
  <span
    aria-owns="_r_4i_"
    style="clip-path: inset(50%); position: fixed; top: 0px; left: 0px;"
  />
  <span
    data-base-ui-focus-guard=""
    data-type="outside"
    role="button"
    style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
    tabindex="0"
  />
</DocumentFragment>
`;

exports[`DropdownMenu > DropdownMenuLabel > renders with inset properly 1`] = `
<DocumentFragment>
  <button
    aria-controls="_r_4n_"
    aria-expanded="true"
    aria-haspopup="menu"
    data-slot="dropdown-menu-trigger"
    id="base-ui-_r_4p_"
    tabindex="0"
    type="button"
  >
    Menu
  </button>
  <span
    data-base-ui-focus-guard=""
    data-type="outside"
    role="button"
    style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
    tabindex="0"
  />
  <span
    aria-owns="_r_4r_"
    style="clip-path: inset(50%); position: fixed; top: 0px; left: 0px;"
  />
  <span
    data-base-ui-focus-guard=""
    data-type="outside"
    role="button"
    style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
    tabindex="0"
  />
</DocumentFragment>
`;

exports[`DropdownMenu > DropdownMenuRadioGroup and DropdownMenuRadioItem > applies custom className to radio items 1`] = `
<DocumentFragment>
  <button
    aria-controls="_r_45_"
    aria-expanded="true"
    aria-haspopup="menu"
    data-slot="dropdown-menu-trigger"
    id="base-ui-_r_47_"
    tabindex="0"
    type="button"
  >
    Menu
  </button>
  <span
    data-base-ui-focus-guard=""
    data-type="outside"
    role="button"
    style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
    tabindex="0"
  />
  <span
    aria-owns="_r_49_"
    style="clip-path: inset(50%); position: fixed; top: 0px; left: 0px;"
  />
  <span
    data-base-ui-focus-guard=""
    data-type="outside"
    role="button"
    style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
    tabindex="0"
  />
</DocumentFragment>
`;

exports[`DropdownMenu > DropdownMenuRadioGroup and DropdownMenuRadioItem > renders radio group properly 1`] = `
<DocumentFragment>
  <button
    aria-controls="_r_3h_"
    aria-expanded="true"
    aria-haspopup="menu"
    data-slot="dropdown-menu-trigger"
    id="base-ui-_r_3j_"
    tabindex="0"
    type="button"
  >
    Menu
  </button>
  <span
    data-base-ui-focus-guard=""
    data-type="outside"
    role="button"
    style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
    tabindex="0"
  />
  <span
    aria-owns="_r_3l_"
    style="clip-path: inset(50%); position: fixed; top: 0px; left: 0px;"
  />
  <span
    data-base-ui-focus-guard=""
    data-type="outside"
    role="button"
    style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
    tabindex="0"
  />
</DocumentFragment>
`;

exports[`DropdownMenu > DropdownMenuSeparator > applies custom className 1`] = `
<DocumentFragment>
  <button
    aria-controls="_r_5j_"
    aria-expanded="true"
    aria-haspopup="menu"
    data-slot="dropdown-menu-trigger"
    id="base-ui-_r_5l_"
    tabindex="0"
    type="button"
  >
    Menu
  </button>
  <span
    data-base-ui-focus-guard=""
    data-type="outside"
    role="button"
    style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
    tabindex="0"
  />
  <span
    aria-owns="_r_5n_"
    style="clip-path: inset(50%); position: fixed; top: 0px; left: 0px;"
  />
  <span
    data-base-ui-focus-guard=""
    data-type="outside"
    role="button"
    style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
    tabindex="0"
  />
</DocumentFragment>
`;

exports[`DropdownMenu > DropdownMenuSeparator > renders properly 1`] = `
<DocumentFragment>
  <button
    aria-controls="_r_59_"
    aria-expanded="true"
    aria-haspopup="menu"
    data-slot="dropdown-menu-trigger"
    id="base-ui-_r_5b_"
    tabindex="0"
    type="button"
  >
    Menu
  </button>
  <span
    data-base-ui-focus-guard=""
    data-type="outside"
    role="button"
    style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
    tabindex="0"
  />
  <span
    aria-owns="_r_5d_"
    style="clip-path: inset(50%); position: fixed; top: 0px; left: 0px;"
  />
  <span
    data-base-ui-focus-guard=""
    data-type="outside"
    role="button"
    style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
    tabindex="0"
  />
</DocumentFragment>
`;

exports[`DropdownMenu > DropdownMenuShortcut > applies custom className 1`] = `
<DocumentFragment>
  <button
    aria-controls="_r_64_"
    aria-expanded="true"
    aria-haspopup="menu"
    data-slot="dropdown-menu-trigger"
    id="base-ui-_r_66_"
    tabindex="0"
    type="button"
  >
    Menu
  </button>
  <span
    data-base-ui-focus-guard=""
    data-type="outside"
    role="button"
    style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
    tabindex="0"
  />
  <span
    aria-owns="_r_68_"
    style="clip-path: inset(50%); position: fixed; top: 0px; left: 0px;"
  />
  <span
    data-base-ui-focus-guard=""
    data-type="outside"
    role="button"
    style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
    tabindex="0"
  />
</DocumentFragment>
`;

exports[`DropdownMenu > DropdownMenuShortcut > renders properly 1`] = `
<DocumentFragment>
  <button
    aria-controls="_r_5r_"
    aria-expanded="true"
    aria-haspopup="menu"
    data-slot="dropdown-menu-trigger"
    id="base-ui-_r_5t_"
    tabindex="0"
    type="button"
  >
    Menu
  </button>
  <span
    data-base-ui-focus-guard=""
    data-type="outside"
    role="button"
    style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
    tabindex="0"
  />
  <span
    aria-owns="_r_5v_"
    style="clip-path: inset(50%); position: fixed; top: 0px; left: 0px;"
  />
  <span
    data-base-ui-focus-guard=""
    data-type="outside"
    role="button"
    style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
    tabindex="0"
  />
</DocumentFragment>
`;

exports[`DropdownMenu > DropdownMenuSub components > applies custom className to sub components 1`] = `
<DocumentFragment>
  <button
    aria-controls="_r_77_"
    aria-expanded="true"
    aria-haspopup="menu"
    data-slot="dropdown-menu-trigger"
    id="base-ui-_r_79_"
    tabindex="0"
    type="button"
  >
    Menu
  </button>
  <span
    data-base-ui-focus-guard=""
    data-type="outside"
    role="button"
    style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
    tabindex="0"
  />
  <span
    aria-owns="_r_7b_"
    style="clip-path: inset(50%); position: fixed; top: 0px; left: 0px;"
  />
  <span
    data-base-ui-focus-guard=""
    data-type="outside"
    role="button"
    style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
    tabindex="0"
  />
</DocumentFragment>
`;

exports[`DropdownMenu > DropdownMenuSub components > renders sub menu properly 1`] = `
<DocumentFragment>
  <button
    aria-controls="_r_6d_"
    aria-expanded="true"
    aria-haspopup="menu"
    data-slot="dropdown-menu-trigger"
    id="base-ui-_r_6f_"
    tabindex="0"
    type="button"
  >
    Menu
  </button>
  <span
    data-base-ui-focus-guard=""
    data-type="outside"
    role="button"
    style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
    tabindex="0"
  />
  <span
    aria-owns="_r_6h_"
    style="clip-path: inset(50%); position: fixed; top: 0px; left: 0px;"
  />
  <span
    data-base-ui-focus-guard=""
    data-type="outside"
    role="button"
    style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
    tabindex="0"
  />
</DocumentFragment>
`;

exports[`DropdownMenu > DropdownMenuSub components > renders sub trigger with inset properly 1`] = `
<DocumentFragment>
  <button
    aria-controls="_r_6q_"
    aria-expanded="true"
    aria-haspopup="menu"
    data-slot="dropdown-menu-trigger"
    id="base-ui-_r_6s_"
    tabindex="0"
    type="button"
  >
    Menu
  </button>
  <span
    data-base-ui-focus-guard=""
    data-type="outside"
    role="button"
    style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
    tabindex="0"
  />
  <span
    aria-owns="_r_6u_"
    style="clip-path: inset(50%); position: fixed; top: 0px; left: 0px;"
  />
  <span
    data-base-ui-focus-guard=""
    data-type="outside"
    role="button"
    style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
    tabindex="0"
  />
</DocumentFragment>
`;

exports[`DropdownMenu > Error handling > handles disabled state 1`] = `
<DocumentFragment>
  <button
    aria-controls="_r_9i_"
    aria-expanded="true"
    aria-haspopup="menu"
    data-slot="dropdown-menu-trigger"
    id="base-ui-_r_9k_"
    tabindex="0"
    type="button"
  >
    Menu
  </button>
  <span
    data-base-ui-focus-guard=""
    data-type="outside"
    role="button"
    style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
    tabindex="0"
  />
  <span
    aria-owns="_r_9m_"
    style="clip-path: inset(50%); position: fixed; top: 0px; left: 0px;"
  />
  <span
    data-base-ui-focus-guard=""
    data-type="outside"
    role="button"
    style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
    tabindex="0"
  />
</DocumentFragment>
`;
